--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,7 @@ set -s escape-time 3
 
 # Increase tmux history limit
 set -g history-limit 10000
+set -g renumber-windows on
 
 # Start window and pane numbering from 1.
 set -g base-index 1
@@ -50,7 +51,9 @@ bind -r L resize-pane -R 5
 set -g mouse on
 
 # Set default terminal model to 256color mode
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set  -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",alacritty:RGB"
 
 # Set the status line's colors
 set -g status-style fg=white,bg=black
