--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,15 @@
 # Setting the prefix from C-b to C-a. -g implies global. Free the original prefix
+# set -g implies global (for all tmux sessions), -w implies windows, -p implies pane.
+# -w, -p can be omiited, tmux will infer them from option name.
+# bind -n means no prefix.
+# bind -r makes the binding repeatable. Prefix is needed first time only.
+
 set -g prefix C-a
 unbind C-b
 
-# Setting the delay between prefix and command.
-set -s escape-time 3
-
 # Ensure that we can send C-a to other apps
 bind C-a send-prefix
-bind -n C-e send-prefix
+bind -n C-e send-prefix # For nested tmux.
 
 # Setting the delay between prefix and command.
 set -s escape-time 3
@@ -23,122 +25,17 @@ setw -g pane-base-index 1
 # Reload the file with predix r
 bind r source-file ~/.tmux.conf \; display "Reloaded conf!"
 
-# Splitting panes with | and -
-bind | split-window -h
-bind - split-window -v
-
-# Split pane and retain te current directory of existing pane
-bind '_' split-window -v -c "#{pane_current_path}"
-bind '\' split-window -h -c "#{pane_current_path}"
+# Splitting panes
+bind '|' split-window -h -c "#{pane_current_path}"
+bind '-' split-window -v -c "#{pane_current_path}"
+bind '\' split-window -h
+bind '_' split-window -v
 
 # Moving between panes with Prefix h, j, k, l
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
-# Quick window selection
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-# Resising panes with prefix H, J, K, L
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# Mouse support - set to on if you want to use the mouse
-set -g mouse on
-
-# Set default terminal model to 256color mode
-# set -g default-terminal "screen-256color"
-set  -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",alacritty:RGB"
-
-# Set the status line's colors
-set -g status-style fg=white,bg=black
-
-# Set the color of the window list
-setw -g window-status-style fg=cyan,bg=black
-
-# Set colors for the active window
-setw -g window-status-current-style fg=white,bold,bg=red
-
-
-# Active pane notmal, other shaded out
-# setw -g window-style fg=colour240,bg=colour235
-# setw -g window-active-style fg=white,bg=black
-
-# Command /message line
-setw -g message-style fg=white,bold,bg=black
-
-# Status line left side to show Session:window:pane
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-
-# Status line right side
-set -g status-right "#(~/battery Discharging) | #[fg=cyan]%d %b %R"
-
-# Update the status line every sixty seconds
-set -g status-interval 60
-
-# Center the window list in the status line
-set -g status-justify centre
-
-setw -g monitor-activity on
-set -g visual-activity on
-
-# Enable vi keys
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
-setw -g mode-keys vi
-
-
-bind Escape copy-mode
-
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi r send-keys -X rectangle-toggle
-
-if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
-
-if -b 'command -v xclip > /dev/null 2>&1' 'bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"'
-
-
-# -- buffers -------------------------------------------------------------------
-unbind p
-bind b list-buffers  # list paste buffers
-bind p paste-buffer  # paste from the top paste buffer
-
-
-# Log output to a text file on demand
-bind P pipe-pane -o "cat >> ~/#W.log" \; display "Toggled logging to ~/#W.log"
-
-# Increase tmux history limit
-set -g history-limit 10000
-
-# Start window and pane numbering from 1.
-set -g base-index 1
-setw -g pane-base-index 1
-
-# Reload the file with predix r
-bind r source-file ~/.tmux.conf \; display "Reloaded conf!"
-
-# Splitting panes with | and -
-bind | split-window -h
-bind - split-window -v
-
-# Split pane and retain te current directory of existing pane
-bind '_' split-window -v -c "#{pane_current_path}"
-bind '\' split-window -h -c "#{pane_current_path}"
-
-# Moving between panes with Prefix h, j, k, l
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# Quick window selection
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
 
 # Resising panes with prefix H, J, K, L
 bind -r H resize-pane -L 5
@@ -151,9 +48,9 @@ set -g mouse on
 
 # Set default terminal model to 256color mode
 set -g default-terminal "screen-256color"
+# set  -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",alacritty:RGB"
 
-# Set the status line's colors
-set -g status-style fg=white,bg=black
 
 # Set the color of the window list
 setw -g window-status-style fg=cyan,bg=black
@@ -162,24 +59,14 @@ setw -g window-status-style fg=cyan,bg=black
 setw -g window-status-current-style fg=white,bold,bg=red
 
 
-# Active pane notmal, other shaded out
-# setw -g window-style fg=colour240,bg=colour235
-# setw -g window-active-style fg=white,bg=black
-
 # Command /message line
+# Settings pertaining to status line
 setw -g message-style fg=white,bold,bg=black
-
-# Status line left side to show Session:window:pane
+set -g status-style fg=white,bg=black
 set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-
-# Status line right side
 set -g status-right "#(~/battery Discharging) | #[fg=cyan]%d %b %R"
-
-# Update the status line every sixty seconds
 set -g status-interval 60
-
-# Center the window list in the status line
 set -g status-justify centre
 
 setw -g monitor-activity on
@@ -189,22 +76,17 @@ set -g visual-activity on
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 setw -g mode-keys vi
 
-
 bind Escape copy-mode
-
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
 if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
-
 if -b 'command -v xclip > /dev/null 2>&1' 'bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"'
-
 
 # -- buffers -------------------------------------------------------------------
 unbind p
 bind b list-buffers  # list paste buffers
 bind p paste-buffer  # paste from the top paste buffer
-
 
 # Log output to a text file on demand
 bind P pipe-pane -o "cat >> ~/#W.log" \; display "Toggled logging to ~/#W.log"
